[tool.poetry]
name = "search_repo"
version = "0.1.0"
description = "Search for a github repo"
authors = ["Tomer Keren <tomer.keren.dev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.6.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "*"
flake8 = "*"
mypy = "^0.782"

[tool.poetry.scripts]
search_repo = 'search_repo:main'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
