[tool.poetry]
name = "search_repo"
version = "0.2.2"
description = "Search for a github repo"
authors = ["Tomer Keren <tomer.keren.dev@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Tadaboody/search_repo"

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.6.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "*"
mypy = "^0.782"
rope = "^0.17.0"

[tool.poetry.scripts]
search_repo = 'search_repo:main'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
